src/objects/DRDW_Event_Days__c.object
<CustomObject>
    <fields>
        <fullName>Allocated_Hours__c</fullName>
        <label>Allocated Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allocation_Percentage__c</fullName>
        <formula>if(DRDW_Resource__r.Hours_Available_Per_Day__c != 0,(Allocated_Hours__c  /  DRDW_Resource__r.Hours_Available_Per_Day__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allocation Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DRDW_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DRDW Event</label>
        <referenceTo>DRDW_Event__c</referenceTo>
        <relationshipLabel>DRDW Event Days</relationshipLabel>
        <relationshipName>DRDW_Event_Days</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DRDW_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DRDW Resource</label>
        <referenceTo>DRDW_Resource__c</referenceTo>
        <relationshipLabel>DRDW Event Days</relationshipLabel>
        <relationshipName>DRDW_Event_Days</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Go_Sub_Activities__c</fullName>
        <label>Go Sub Activities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ERL</fullName>
                </value>
                <value>
                    <fullName>GO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weekend__c</fullName>
        <formula>IF(WEEKDAY(Date__c)==1,true,IF(WEEKDAY(Date__c)==7,true,false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weekend</label>
        <type>Checkbox</type>
    </fields>
    <label>DRDW Event Days</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>DRDW Event Days Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRDW Event Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>